<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_packing"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/packing" />
        <item
            android:id="@+id/nav_warehouse"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/warehouse" />
    </group>
    <group
        android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/help" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>